RESOLVED FIXED67903
ARM and MIPS assemblers still refer to executable pools.
https://bugs.webkit.org/show_bug.cgi?id=67903
Summary ARM and MIPS assemblers still refer to executable pools.
Filip Pizlo
Reported 2011-09-10 23:54:09 PDT
There are still references to executable pools in some assemblers. Executable pools no longer exist.
Attachments
the patch (4.34 KB, patch)
2011-09-10 23:58 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2011-09-10 23:58:59 PDT
Created attachment 107002 [details] the patch
WebKit Review Bot
Comment 2 2011-09-11 00:03:36 PDT
Comment on attachment 107002 [details] the patch Rejecting attachment 107002 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: cripts/webkitpy/common/system/executive.py", line 420, in run_command close_fds=self._should_close_fds()) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/system/executive.py", line 476, in popen return subprocess.Popen(*args, **kwargs) File "/usr/lib/python2.6/subprocess.py", line 623, in __init__ errread, errwrite) File "/usr/lib/python2.6/subprocess.py", line 1141, in _execute_child raise child_exception TypeError: execv() arg 2 must contain only strings Full output: http://queues.webkit.org/results/9635408
Csaba Osztrogonác
Comment 3 2011-09-11 00:07:28 PDT
Comment on attachment 107002 [details] the patch Clearing flags on attachment: 107002 Committed r94922: <http://trac.webkit.org/changeset/94922>
Csaba Osztrogonác
Comment 4 2011-09-11 00:07:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.