ARM and MIPS assemblers still refer to executable pools. https://bugs.webkit.org/show_bug.cgi?id=67903

Patch by Filip Pizlo <fpizlo@apple.com> on 2011-09-11
Reviewed by Csaba Osztrogonác.

* assembler/ARMAssembler.cpp:
(JSC::ARMAssembler::executableCopy):
* assembler/ARMAssembler.h:
* assembler/AssemblerBufferWithConstantPool.h:
* assembler/MIPSAssembler.h:
(JSC::MIPSAssembler::executableCopy):

Canonical link: https://commits.webkit.org/83808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94922 268f45cc-cd09-0410-ab3c-d52691b4dbfc